플레이어 이동 애니메이션과 공격 애니메이션 추가

--- a/YjhSpellunky2/Engine_SOURCE/Engine_SOURCE.vcxproj.filters
+++ b/YjhSpellunky2/Engine_SOURCE/Engine_SOURCE.vcxproj.filters
@@ -91,6 +91,9 @@
     <Filter Include="Component\Collider\3D">
       <UniqueIdentifier>{6b267699-3830-4c57-89d0-68c916e6fb9a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Animation">
+      <UniqueIdentifier>{a56848a0-7674-497c-935a-7f8f680b5935}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="yaApplication.cpp">
@@ -206,6 +209,12 @@
     </ClCompile>
     <ClCompile Include="yaCharacterSelectScene.cpp">
       <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="yaAnimator.cpp">
+      <Filter>Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="yaAnimation.cpp">
+      <Filter>Animation</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -337,6 +346,12 @@
     </ClInclude>
     <ClInclude Include="yaCharacterSelectScene.h">
       <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="yaAnimator.h">
+      <Filter>Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="yaAnimation.h">
+      <Filter>Animation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
