스펠렁키 타이틀과 캐릭터 선택창을 한 씬에서 처리하기 위한 사전 작업
스펠렁키의 타이틀과 캐릭터 선택 메뉴들은 전부 한 씬에서 Fade in Fade out 효과를 통해 전환되어지는 것을 확인 그를 위한 사전작업

--- a/YjhSpellunky2/Engine_SOURCE/Engine_SOURCE.vcxproj.filters
+++ b/YjhSpellunky2/Engine_SOURCE/Engine_SOURCE.vcxproj.filters
@@ -216,6 +216,7 @@
     <ClCompile Include="yaAnimation.cpp">
       <Filter>Animation</Filter>
     </ClCompile>
+    <ClCompile Include="yaFadeEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommonInclude.h">
@@ -353,6 +354,7 @@
     <ClInclude Include="yaAnimation.h">
       <Filter>Animation</Filter>
     </ClInclude>
+    <ClInclude Include="yaFadeEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="yaMath.inl">
